fixed top getting cut off and background view height

--- a/style.css
+++ b/style.css
@@ -14,16 +14,14 @@ body {
 
 /*container*/
 .section {
-    height: 100vh;
-    /* max-height: 100%; */
+    min-height: 100vh;
     background: linear-gradient(to bottom, hsl(273, 75%, 66%), hsl(240, 73%, 65%));
-    /* display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; */
-    padding-top:6rem;
-    display: grid;
-    align-items: center;
+    flex-direction: column;
+    padding-top:8rem;
+    
    
 }
 
